manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __CI_PROJECT_PATH_SLUG__-__CI_COMMIT_BRANCH__
  namespace: framework
  labels:
    app: __CI_PROJECT_NAME__
    branches: __CI_COMMIT_BRANCH__
    track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __CI_PROJECT_NAME__
      branches: __CI_COMMIT_BRANCH__
  template:
    metadata:
      labels:
        app: __CI_PROJECT_NAME__
        branches: __CI_COMMIT_BRANCH__
        track: stable
    spec:
      imagePullSecrets:
        - name: myregistry
      containers:
        - name: app
          image: __CI_REGISTRY__/__CI_REGISTRY__DIR/__CI_PROJECT_PATH_SLUG__-__CI_COMMIT_BRANCH__:__VERSION__
          imagePullPolicy: Always
          ports:
            - name: http-metrics
              protocol: TCP
              containerPort: 8000
#          livenessProbe:
#            httpGet:
#              path: /
#              port: 8000
#            initialDelaySeconds: 3
#            timeoutSeconds: 2
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 8000
#            initialDelaySeconds: 3
#            timeoutSeconds: 2
